tiny adjustment to avoid 1px white showing on mobile

--- a/src/scss/layouts/_me.scss
+++ b/src/scss/layouts/_me.scss
@@ -19,11 +19,14 @@
         height: 80vh;
         margin-bottom: -10vh;
         margin-left: -5vw;
+        overflow-y: hidden;
         position: relative;
 
         img {
             display: block;
             height: 100%;
+            position: relative;
+            top: 1px;
             width: auto;
         }
 
